# hebo

./: .cursorrules  .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  hebo.txt  nginx.conf  pyproject.toml
backend/: .env.template  .gitignore  README.md  asgi.py  manage.py  package-lock.json  package.json  pyproject.toml  settings.py  tailwind.config.js  urls.py  webpack.config.js  wsgi.py
backend/agent_settings/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/agent_settings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_agentsetting_vision_llm_and_more.py  0003_alter_llmadapter_name.py  0003_tool_name_agentsetting_unique_version_settings.py  0004_agentsetting_include_last_24h_history.py  0004_llmadapter_aws_access_key_id_and_more.py  0004_remove_tool_sql_query_tool_query.py  0005_rename_openapi_url_tool_url_and_more.py  0006_mcpconfig_delete_tool_and_more.py
backend/api_keys/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api_keys/migrations/: 0001_initial.py  (+1 more)
backend/core/: adapter.py  api.py  authentication.py  context_processors.py  managers.py  middleware.py  mixins.py  urls.py  views.py
backend/evaluation/: models.py
backend/hebo_organizations/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/knowledge/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/templates/: 404.html  base.html  home.html
backend/threads/: admin.py  models.py
backend/versions/: admin.py  forms.py  models.py  urls.py  views.py
(+102 files in other folders)
