[project]
name = "hebo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 88

# Exclude files and directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".env",
    ".vscode",
    ".github",
    ".dev",
    "uv.lock",
    "pyproject.toml",
    "Dockerfile",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "venv",
    "tests/*",
]

[tool.ruff.lint]
# Select and ignore specific rules
select = ["E", "F", "W", "N"]
ignore = ["E501", "E203", "N806"]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
